<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
                  android:id="@+id/scan_titile"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/color_title"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:text="@string/downTitle"/>
        <ImageView
            android:id="@+id/go_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_title"
            android:src="@mipmap/goback"/>
    </LinearLayout>
    <Button
        android:id="@+id/downAllBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnshape"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:text="@string/downAllBtn"/>
    <Button
        android:id="@+id/downStockBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnshape"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:text="@string/downStockBtn"/>
    <Button
        android:id="@+id/downProductBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnshape"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:text="@string/downProductBtn"/>
    <Button
        android:id="@+id/downAgentBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnshape"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:text="@string/downAgentBtn"/>
</LinearLayout>