<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="0dp"
                  android:layout_weight="1.5"
                  android:layout_height="match_parent">
        <TextView
            android:id="@+id/inmenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:text="@string/inmenu"/>

        <TextView
            android:id="@+id/ordermenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:text="@string/ordermenu"/>
        <TextView
            android:id="@+id/returnmenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:text="@string/returnmenu"/>
        <TextView
            android:id="@+id/allotmenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:text="@string/allotmenu"/>
        <TextView
            android:id="@+id/checkmenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:background="@drawable/textview_border"
            android:text="@string/checkmenu"/>
    </LinearLayout>
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:background="@drawable/contentview_border"
        >
        <LinearLayout
            android:id="@+id/menucontent"
            android:visibility="invisible"
            android:background="@color/Palewhite"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" >
                <Button
                    android:id="@+id/billbtn"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:text="@string/bill"
                    android:textSize="17dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" >
                <Button
                    android:id="@+id/scanbtn"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:text="@string/scan"
                    android:textSize="17dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" >
                <Button
                    android:id="@+id/querybtn"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:text="@string/query"
                    android:textSize="17dp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>