<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
                  android:id="@+id/scan_titile"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/color_title"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:text="@string/return_scantext"/>
        <ImageView
            android:id="@+id/go_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_title"
            android:src="@mipmap/goback"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/num_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_titile"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/bill_num"/>
        <Spinner
            android:id="@+id/num_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"

            ></Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/date_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_linear"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/bill_date"/>
        <EditText
            android:id="@+id/bill_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/agent_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_linear"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/warehouse_name"/>
        <EditText
            android:id="@+id/tbWarehouse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/product_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agent_linear"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/return_product"/>
        <EditText
            android:id="@+id/tbProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/code_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_linear"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/barcode"/>
        <EditText
            android:id="@+id/bar_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/presetLiner"
        android:layout_below="@id/code_linear"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="35dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/lbCurPreset"/>
        <TextView
            android:id="@+id/lbCurPreset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/lbBillPreset"/>
        <TextView
            android:id="@+id/lbBillPreset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/countLiner"
        android:layout_below="@id/presetLiner"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="35dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/lbCurCount"/>
        <TextView
            android:id="@+id/lbCurCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/lbBillCount"/>
        <TextView
            android:id="@+id/lbBillCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLiner"
        android:layout_below="@id/countLiner"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btn_Lock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnLock"/>
        <Button
            android:id="@+id/btn_Upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnUpload"/>
        <Button
            android:id="@+id/btn_DelBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnDelBill"/>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:fadeScrollbars="false"
        android:visibility="invisible"
        android:layout_below="@+id/product_linear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 标题 -->
            <LinearLayout
                android:id="@+id/list_title"
                android:layout_below="@id/product_linear"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tabcolor">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/pcode"
                    />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/pname"
                    />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/pln"
                    />
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/pr"
                    />
            </LinearLayout>

            <ListView
                android:id="@+id/in_list_view"
                android:layout_below="@id/list_title"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:transcriptMode="normal"
                android:divider="@color/tabcolor"
                android:dividerHeight="1dp"
                android:background="@color/border"
                android:fadeScrollbars="false"
                android:layout_alignParentTop="true"
                android:scrollbars="vertical">
            </ListView>
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>
