<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scan_check">

    <LinearLayout android:orientation="horizontal"
                  android:id="@+id/scan_titile"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/color_title"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:text="@string/check_scantext"/>
        <ImageView
            android:id="@+id/go_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_title"
            android:src="@mipmap/goback"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/num_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_titile"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/bill_num"/>
        <Spinner
            android:id="@+id/num_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"

            ></Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/date_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_linear"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/bill_date"/>
        <EditText
            android:id="@+id/bill_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/agent_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_linear"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/checkWarehouse"/>
        <EditText
            android:id="@+id/tbWarehouse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/product_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agent_linear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/check_product"/>
        <EditText
            android:id="@+id/tbProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pr_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_linear"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/pr"/>
        <EditText
            android:id="@+id/tbPR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pr_linear"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/pln"/>
        <EditText
            android:id="@+id/tbLN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln_linear"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="19dp"
            android:gravity="center"
            android:text="@string/barcode"/>
        <EditText
            android:id="@+id/tbBarcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:padding="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/countLiner"
        android:layout_below="@id/code_linear"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_height="35dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/lbCurCount"/>
        <TextView
            android:id="@+id/lbCurCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/lbBillCount"/>
        <TextView
            android:id="@+id/lbBillCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLiner"
        android:layout_below="@id/countLiner"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_Lock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnLock"/>
        <Button
            android:id="@+id/btn_Upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnUpload"/>
        <Button
            android:id="@+id/btn_DelBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:text="@string/btnDelBill"/>
    </LinearLayout>

</RelativeLayout>